Bug 307625 - Cards too small
Summary: Cards too small
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.6
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Karl Ove Hufthammer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-30 17:34 UTC by Luis Silva
Modified: 2018-09-20 18:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.08.2
Sentry Crash Report:


Attachments
Screenshot exemplifying the issue. (738.71 KB, image/png)
2012-09-30 17:42 UTC, Luis Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Silva 2012-09-30 17:34:44 UTC
In some games, the cards are considerably smaller than in others. This makes it unconfortable to play these games as the cards are too small.
I attach a screenshot of the issue. Notice the wasted space that could be used to increase the cards size.

Reproducible: Always
Comment 1 Luis Silva 2012-09-30 17:42:05 UTC
Created attachment 74250 [details]
Screenshot exemplifying the issue.
Comment 2 Luis Silva 2017-03-23 14:56:16 UTC
This issue is still valid today.
Comment 3 Karl Ove Hufthammer 2018-09-15 14:25:47 UTC
I’ll try to fix this. See the screenshot for the proposed fix at https://phabricator.kde.org/D15534.
Comment 4 Karl Ove Hufthammer 2018-09-20 18:00:32 UTC
Git commit eb5fa8dab3559bf008829154c4c17239af607da6 by Karl Ove Hufthammer.
Committed on 20/09/2018 at 18:00.
Pushed by huftis into branch 'Applications/18.08'.

Reduce wasted space for Klondike and Grandfather

Summary:
Klondike and (especially) Grandfather reserves a lot of
space at the bottom of the screen for long card piles.
This results in very small cards, which makes the game
uncomfortable to play, especially on smaller screens.

This commmit reduces the space reserved at the bottom
of the screen, which automatically enlarges the cards.
Long piles don’t pose a problem, as KPat automatically
compresses the cards to fit the screen.

Even with the reduced space, the colours and numbers are
still clearly visible, also in a ‘worst case’ scenario with very
long piles. (In these two game types, only the colour
(i.e. red vs. black) matter, not the suit, so it is not a
problem if the suits of the cards aren’t visible.)
Related: bug 378914

FIXED-IN: 18.08.2

Test Plan:
Play Grandfather and Klondike before and after this patch.
Note that the cards are much bigger after the patch
and that the numbers and colours are still clearly visible.

Reviewers: #kde_games, fabiank, mlaurent

Reviewed By: fabiank

Subscribers: kde-games-devel

Differential Revision: https://phabricator.kde.org/D15534

M  +1    -1    grandf.cpp
M  +1    -1    klondike.cpp

https://commits.kde.org/kpat/eb5fa8dab3559bf008829154c4c17239af607da6